# flet-terminal

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-all.yml  publish.yml
docs/: FletTerminal.md  flet_extensions_research.md  implementation_plan.md  index.md  modularization_plan.md  task.md  walkthrough.md  xterm_comparison_research.md
examples/flet_terminal_example/: README.md  pyproject.toml
examples/flet_terminal_example/src/: demo_engine.py  main.py  pty_service.py  ui_helpers.py
src/flet_terminal/: __init__.py  extra_keys.py  mobile_terminal.py  search_bar.py  terminal.py  themes.py  tokens.py
src/flutter/flet_terminal/: CHANGELOG.md  README.md  pubspec.yaml
src/flutter/flet_terminal/lib/: flet_terminal.dart
src/flutter/flet_terminal/lib/src/: extension.dart  flet_terminal.dart
