[project]
name = "flet-terminal-example"
version = "0.1.0"
description = "Cross-Platform Studio & Example app for flet-terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet-terminal @ file://${PROJECT_ROOT}/../..",
    "flet>=0.86.0",
]

[tool.uv]
dev-dependencies = []
