[project]
name = "flet-terminal-example"
version = "0.1.0"
description = "Cross-Platform Studio & Example app for flet-terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet-terminal",
    "flet>=0.86.0",
]

[tool.flet]
org = "ng.kiri"
product = "FletTerminal Studio"
build_number = 1

[tool.flet.app]
path = "src"

[tool.uv.sources]
flet-terminal = { path = "../..", editable = true }

[dependency-groups]
dev = []
