[project]
name = "flet-terminal-example"
version = "0.2.0"
description = "Cross-Platform Demo & Example app for flet-terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet-terminal",
    "flet>=0.86.0",
]

[tool.flet]
org = "ng.kiri"
product = "Terminal Demo"
build_number = 1

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-terminal = "../.."

[tool.uv.sources]
flet-terminal = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
